   - Switch to symbolic icons
   - Updated translations

 * Bug fixes:
   - Make password window non-resizable
   - Escape text e.g. in case of & in entry name. Thanks to Tristan Hill.
   - Fix issue where Pasaffe would think a save was required when no fields
     were changed in an entry.
   - Fix some untranslated strings. (LP: #1691668)
   - Updated deprecated Gtk widgets.

0.49 (2017-05-17)

 * Enhancements:
   - Updated translations
   - Add support for opening psafe3 files from the file manager. Thanks to
     Tristan Hill.

 * Bug fixes:
   - Raised password iteration limit from 50k to 100k. Thanks to
     Joshua C. Randall. (LP: #1689784)

0.48 (2017-03-13)

 * Enhancements:

 * Bug fixes:
   - Fixed compatibility with GTK+ 3.20. Thanks to Mathieu Trudel-Lapierre
     for reporting the issue and for the initial patch.

0.47 (2016-06-16)

 * Enhancements:
   - Updated translations

 * Bug fixes:
   - Error when opening database containing missing entry titles
     (LP: #1586335)
   - Properly handle blank entry and folder titles
   - Don't crash if yelp is not installed

0.46 (2016-03-13)

 * Enhancements:

 * Bug fixes:
   - Searches are now accent-insensitive (LP: #1488333)
   - PEP 8 cleanup

0.45 (2016-02-17)

 * Enhancements:
   - Added new pasaffe-cli command-line interface, thanks to C de-Avillez.

 * Bug fixes:
   - Specify Gtk version to prevent warning
   - Stop using deprecated find icon

0.44 (2015-07-30)

 * Enhancements:

 * Bug fixes:
   - PEP 8 cleanup
   - No longer hardcode icon location (LP: #1459823)

0.43 (2015-03-08)

 * Enhancements:
   - Updated translations

 * Bug fixes:
   - Make sure left pane is focused on startup

0.42 (2015-02-05)

 * Enhancements:
   - Updated translations
   - Slightly improve preferences dialog layout

 * Bug fixes:
   - Fix more GTK deprecations

0.41 (2014-11-03)

 * Enhancements:
   - Updated translations

 * Bug fixes:
   - Fixed a regression in 0.40 that added extra lines in notes at
     each save
