@@ -15,6 +15,7 @@ For a detailed list of changes, please see ChangeLog.
      were changed in an entry.
    - Fix some untranslated strings. (LP: #1691668)
    - Updated deprecated Gtk widgets.
+   - Properly support popup menus on Wayland.
 
 0.49 (2017-05-17)
 
